[develop]
script_dir=$base/lib/drcclpvmpc_ros2
[install]
install_scripts=$base/lib/drcclpvmpc_ros2

[options]
packages = find:

[options.data_files]
# install meshes into share/drcclpvmpc_ros2/meshes
share/drcclpvmpc_ros2/meshes = 
    meshes/Audi R8.dae
    meshes/Audi_R8_2017.stl
    meshes/DeLorean.STL
    meshes/Car1 v2.stl
